Added Tom's details

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -7,3 +7,11 @@
     - R
     - geo-spatial
     
+- name: Tom Remenyi
+  affiliation: Antarctic Climate and Ecosystems CRC
+  github: tremenyi
+  interests:
+    - Open Science
+    - R
+    - Climate Science
+    
