corrected my avatar

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -11,7 +11,7 @@
   affiliation: Antarctic Climate and Ecosystems CRC
   github: tremenyi
   interests:
-    - Open Science
+    - Programming
     - R
     - Climate Science
-    
+    - Being Useful
