--- a/_data/members.yml
+++ b/_data/members.yml
@@ -15,3 +15,12 @@
     - R
     - Climate Science
     - Being Useful
+
+- name: Ben Schroeter
+  affiliation: Institute for Marine and Antarctic Studies
+  github: bschroeter
+  interests:
+    - Computational Modelling
+    - Machine Learning
+    - HPC
+    - Python
