--- a/_data/members.yml
+++ b/_data/members.yml
@@ -24,3 +24,11 @@
     - Machine Learning
     - HPC
     - Python
+
+- name: Marty Hidas
+  affiliation: Integrated Marine Observing System / Australian Ocean Data Network
+  github: mhidas
+  interests:
+    - Making data open, usable & useful
+    - Python
+    - Spatial data
