--- a/_data/members.yml
+++ b/_data/members.yml
@@ -2,10 +2,12 @@
   affiliation: Australian Antarctic Division and Antarctic Climate and Ecosystems CRC
   github: mdsumner
   interests:
-    - Programming
-    - Open Science
+    - ecosystem modelling
+    - animal tracking
+    - tidy data
+    - open science
     - R
-    - geo-spatial
+    - geo-spatial multi-dimensional generalization
     
 - name: Tom Remenyi
   affiliation: Antarctic Climate and Ecosystems CRC
